Fix overlapping text

--- a/src/components/HorizontalCell/HorizontalCell.css
+++ b/src/components/HorizontalCell/HorizontalCell.css
@@ -8,7 +8,16 @@
   justify-content: center;
 }
 
+.HorizontalCell__title {
+  word-break: break-all;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 .HorizontalCell__subtitle {
+  word-break: break-all;
+  text-overflow: ellipsis;
+  overflow: hidden;
   color: var(--text_secondary);
   line-height: 18px;
 }
